# radiation_detector_testing_system-server-

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/rdtsserver/: config.env  dependencies.py  main.py
server/rdtsserver/db/: tables.py
server/rdtsserver/routers/: assemblies.py  auth.py  crystals.py  crystalstates.py  testsuiteresults.py  testsuites.py
server/rdtsserver/scripts/: create_admin.py  create_engineer.py  create_roles.py  start.sh
server/rdtsserver/utils/: security.py  validator.py
server/rdtsserver/versions/v1/: v1_0_1.py  v1_0_2.py
