[tool.poetry]
name = "radiation-detector-testing-system-server-"
version = "0.1.0"
description = ""
authors = ["Pechenuxa1 <v.tatarintsev@g.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
