[tool.poetry]
name = "radiation-detector-testing-system-server-"
version = "0.1.0"
description = ""
authors = ["Pechenuxa1 <v.tatarintsev@g.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
passlib = "^1.7.4"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
